--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mustache</artifactId>
+            <version>2.4.1</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
