--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/studenthotel
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.jpa.generate-ddl=true
+
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
