--- a/pom.xml
+++ b/pom.xml
@@ -23,30 +23,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-
-
+<!--     security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+<!--     security-->
 
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
-
-
-
-        <!-- https://mvnrepository.com/artifact/org.apache.james/james-server-data-jmap-cassandra -->
-        <dependency>
-            <groupId>org.apache.james</groupId>
-            <artifactId>james-server-data-jmap-cassandra</artifactId>
-            <version>3.5.0</version>
-        </dependency>
-
-
-
-
-
-
-
 
 
         <dependency>
@@ -81,6 +69,12 @@
             <version>2.4.1</version>
             <optional>true</optional>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.jetbrains</groupId>-->
+<!--            <artifactId>annotations</artifactId>-->
+<!--            <version>RELEASE</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
