--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,38 @@
-spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
+#spring.main.banner-mode=off
+#logging.level.org.springframework=ERROR
+#
+#
+##hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+##spring.datasource.initialization-mode=always
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/studenthotel
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+##spring.jpa.generate-ddl=true
+##spring.jpa.hibernate.ddl-auto=create-drop
+#
+##Hibernate Configuration:
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#
+#
+#spring.datasource.initialization-mode=always
+#
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.hibernate.ddl-auto=none
 
-spring.datasource.initialization-mode=always
-spring.datasource.platform=postgres
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/studenthotel
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.generate-ddl=true
 
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#mustache
+spring.mustache.expose-request-attributes=true
