--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,3 @@
-#spring.main.banner-mode=off
-#logging.level.org.springframework=ERROR
-#
-#
-##hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-##spring.datasource.initialization-mode=always
-#spring.datasource.platform=postgres
-#spring.datasource.url=jdbc:postgresql://localhost:5432/studenthotel
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-##spring.jpa.generate-ddl=true
-##spring.jpa.hibernate.ddl-auto=create-drop
-#
-##Hibernate Configuration:
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#
-#
-#spring.datasource.initialization-mode=always
-#
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
@@ -32,7 +7,10 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-#mustache
-spring.mustache.expose-request-attributes=true
+spring.mvc.view.prefix = /WEB-INF/jsp/
+spring.mvc.view.suffix = .jsp
