--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     </properties>
     <dependencies>
 
+
         <!--        -->
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
@@ -40,6 +41,13 @@
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.2.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
