--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,20 @@
         <!--     security-->
 
 
+<!--        JSON-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+<!--        JSON-->
+<!--           -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+        </dependency>
+
+
+
 
         <dependency>
             <groupId>org.springframework</groupId>
