--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
+#server.port=8080
+
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/studenthotel
 spring.datasource.username=postgres
