--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,11 @@
         </dependency>
         <!--     security-->
 
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 <!--        JSON-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -89,6 +93,10 @@
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId></groupId>-->
+<!--            <artifactId></artifactId>-->
+<!--        </dependency>-->
 
 
 
